# hortbot

./: .breakpoints  LICENSE  README.md  c.sh  debug.py  git_ssh.sh  level.py  main.py  mysql_concole.py  pyproject.toml  sample.py  ssh.txt  ssh_setup.sh
cogs/: afk.py  ai.py  bot.py  covid19.py  debug.py  error.py  gateway.py  giveaway.py  global.py  image.py  level.py  mod.py  music.py  ngword.py  screenshot.py  status.py  user.py
cogs/captcha/: __init__.py  command.py  web.py
cogs/dashboard/: __init__.py  discord.py  web.py
cogs/docs/: __init__.py  status.py
cogs/gban/: __init__.py  command.py  web.py
cogs/help/: __init__.py  command.py  web.py
data/: help.json
lib64/: AquesTalk.h  libAquesTalk10.so.1.1
module/: button.py  cog_add.py  database.py  logging.py  oauth.py  page.py  web_manager.py
module/bot/: __init__.py  main.py
news.py/: __init__.py  command.py
static/css/: dashboard.css  style.css
templates/: 404.html  429.html  game.html  help.html  help_category.html  help_command.html  index.html  layout.html  status.html  user_error.html  user_info.html  user_info_result.html  verified.html  verify.html
templates/dashboard/: layout.html  main.html
templates/docs/: gateway.md  gban.md  layout.html  main.md  status.md
