[tool.poetry]
name = "repl_python3_beta_bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^21.6.2"
Jinja2 = "^3.0.1"
psutil = "^5.8.0"
jishaku = "^2.3.0"
sanic-limiter = "^0.1.3"
aiomysql = "^0.0.21"
"discord.py" = {git = "https://github.com/rapptz/discord.py", rev = "master"}
Flask-Misaka = "^1.0.0"
"captcha" = "^0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
